Fix z-index of choices fields

--- a/assets/style/formulario_registrar.css
+++ b/assets/style/formulario_registrar.css
@@ -88,4 +88,6 @@
   
   #caixa-registrar-modal {
     border-radius: 0px;
+    position: relative;
+    z-index: 10;
   }
